third_party/move/move-compiler-v2/tests/checking/typing/type_variable_join_threaded_unpack_invalid.exp

Diagnostics:
error: `integer` not compatible with `bool` in name expression
   ┌─ tests/checking/typing/type_variable_join_threaded_unpack_invalid.move:34:9
   │
34 │         f1
   │         ^^
